force-app/main/default/objects/Opportunity_Matrix__mdt/Opportunity_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Matrix</label>
    <pluralLabel>Opportunity Matrix</pluralLabel>
</CustomObject>