force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Group_By__c.field-meta.xml
<CustomField>
    <fullName>Group_By__c</fullName>
    <label>Group By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>