force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>