force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 1</label>
    <type>Checkbox</type>
</CustomField>