force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Level_2_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Priority_Score__c</fullName>
    <label>Level 2 Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>