force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 3</label>
    <type>Checkbox</type>
</CustomField>