force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <label>Parent Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>