force-app/main/default/objects/Opportunity_Matrix__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>